2006-01-16  Kazu Hirata  <kazu@codesourcery.com>

	* bb-reorder.c (partition_hot_cold_basic_blocks): Make it
	static.
	* basic-block.h: Remove the prototype for
	partition_hot_cold_basic_blocks.

2006-01-16  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>

	* cppspec.c (lang_specific_spec_functions): remove
	* gcc.c (lookup_spec_function): use static_spec_functions directelly
	* gcc.h (lang_specific_spec_functions): remove
	* gccspec.c (lang_specific_spec_functions): remove

2005-01-16  Paolo Bonzini  <bonzini@gnu.org>

	* combine.c (record_value_for_reg): Invalidate registers
	if INSN is null.
	(record_dead_and_set_regs_1): Likewise, by passing them to
	record_value_for_reg.
	(record_dead_and_set_regs): Invalidate stores made by a
	call.  We do not combine across a call, but we still
	relied on equivalences.

2006-01-16  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-vrp.c (extract_range_from_binary_expr): Cope with
	vrp_int_const_binop returning non-constant nodes.

2006-01-16  Paul Brook  <paul@codesourcery.com>

	* config/m68k/m68k.c (output_move_const_into_data_reg):
	Output correct mnemonic for mvz and mvs.

2006-01-16  Gabor Loki <loki@gcc.gnu.org>

	* rtl-factoring.c : Add sequence abstraction algorithm.
	* cfgcleanup.c (outgoing_edges_match): Extra checks.
	(try_crossjump_to_edge): Avoid deleting preserve label when redirecting
	ABNORMAL edges.
	(block_has_preserve_label): New function.
	* common.opt: Register new pass.
	* Makefile.in: Ditto.
	* passes.c: Ditto.
	* timevar.def: Ditto.
	* tree-pass.h: Ditto.
	* emit-rtl.c (make_jump_insn_raw): Remove forward decl.
	* rtl.h (make_jump_insn_raw): Add forward decl.
	* doc/invoke.texi: Add documentation for -frtl-abstract-sequences.

2006-01-16  Eric Botcazou  <ebotcazou@adacore.com>
            Roger Sayle  <roger@eyesopen.com> 

	* fold-const.c (fold_minmax): New static function.
	(fold_binary) <MIN_EXPR>: Call it.
	<MAX_EXPR>: Likewise.
	* stor-layout.c (place_field): Use DECL_SIZE consistently