@@ -1,3 +1,7 @@
+2006-01-16  Richard Guenther  <rguenther@suse.de>
+
+	* gcc.dg/tree-ssa/20031015-1.c: Adjust testcase.
+
 2006-01-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR testsuite/25777
